updated the code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caleb Addi Coding</title>
-    <link rel="stylesheet" href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/19087d37bf.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c11bbebeff.js" crossorigin="anonymous"></script>
 </head>
@@ -26,7 +26,7 @@
                     <a href="#about" class="navbar__links" id="about-page">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="file:///C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/portfolio_index.html" class="navbar__links" id="portfolio-page">Portfolio</a>
+                    <a href="portfolio_index.html" class="navbar__links" id="portfolio-page">Portfolio</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#contact" class="navbar__links" id="contact-page">Contact</a>
@@ -39,12 +39,12 @@
         <div class="hero__container">
             <h1 class="hero__heading">Dive into my <span><em>Website</em></span></h1>
             <p class="hero__description">Fullstack/Game Development</p>
-            <button class="main__btn"><a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/stylesweb01.html">Services</a></button>
+            <button class="main__btn"><a href="stylesweb01.html">Services</a></button>
         </div>
     </div>
 
 <div class="hero-img__addi">
-    <img src="C:/Users/caleb/Documents/Images/AddiImg01.jpg" alt="Addi Coding" class="addi__img">
+    <img src="AddiImg01.jpg" alt="Addi Coding" class="addi__img">
 </div>
 
     <!--About Section-->
@@ -128,6 +128,6 @@
     </div>
 
     <!--link to JS-->
-    <script src="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/Javascript/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
