--- a/portfolio_index.html
+++ b/portfolio_index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/CSS/portfolio_styles.css">
+    <link rel="stylesheet" href="portfolio_styles.css">
     <script src="https://kit.fontawesome.com/c11bbebeff.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="file:///C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#home" id="navbar__logo">Addi Coding</a>
+            <a href="index.html?#home" id="navbar__logo">Addi Coding</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -19,17 +19,17 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#home" class="navbar__links" id="home-page">Home</a>
+                    <a href="index.html?#home" class="navbar__links" id="home-page">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#about" class="navbar__links" id="about-page">About</a>
+                    <a href="index.html?#about" class="navbar__links" id="about-page">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/portfolio_index.html" class="navbar__links"
+                    <a href="portfolio_index.html" class="navbar__links"
                         id="portfolio-page">Portfolio</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#contact" class="navbar__links" id="contact-page">Contact</a>
+                    <a href="index.html?#contact" class="navbar__links" id="contact-page">Contact</a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
             <div>
                 <!--===== Portfolio Setup Section Web Dev =====-->
                 <div class="portfolio__content grid">
-                    <img src="C:/Users/caleb/Documents/Images/WebDev01.png" alt="" class="portfolio__img">
+                    <img src="WebDev01.png" alt="" class="portfolio__img">
                     <div class="portfolio__data">
                         <h3 class="portfolio__title">Web Dev/Design</h3>
                         <p class="portfolio__description">Website adaptable to all devices, with ui components and Animations.</p>
@@ -54,7 +54,7 @@
                 </div>
                 <!--===== Portfolio Setup Section App Dev =====-->
                 <div class="portfolio__content grid">
-                    <img src="C:/Users/caleb/Documents/Images/AppDev01.jpg" alt="" class="portfolio__img">
+                    <img src="AppDev01.jpg" alt="" class="portfolio__img">
                     <div class="portfolio__data">
                         <h3 class="portfolio__title">App Dev</h3>
                         <p class="portfolio__description">Enter Description Here.</p>
@@ -65,7 +65,7 @@
                 </div>
                 <!--===== Portfolio Setup Section AI Dev =====-->
                 <div class="portfolio__content grid">
-                    <img src="C:/Users/caleb/Documents/Images/AIDev01.jpg" alt="" class="portfolio__img">
+                    <img src="AIDev01.jpg" alt="" class="portfolio__img">
                     <div class="portfolio__data">
                         <h3 class="portfolio__title">AI Dev</h3>
                         <p class="portfolio__description">Enter Description Here.</p>
@@ -76,7 +76,7 @@
                 </div>
                 <!--===== Portfolio Setup Section Game Dev =====-->
                 <div class="portfolio__content grid">
-                    <img src="C:/Users/caleb/Documents/Images/GameDev01.png" alt="" class="portfolio__img">
+                    <img src="GameDev01.png" alt="" class="portfolio__img">
                     <div class="portfolio__data">
                         <h3 class="portfolio__title">Game Dev</h3>
                         <p class="portfolio__description">Enter Description Here.</p>
@@ -205,8 +205,8 @@
     </section>
     
     <!--link to JS-->
-    <script src="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/Javascript/main.js"></script>
-    <script src="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/Javascript/stylesweb01.js"></script>
+    <script src="main.js"></script>
+    <script src="stylesweb01.js"></script>
 
 </body>
 </html>
