--- a/stylesweb01.html
+++ b/stylesweb01.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caleb Addi Coding</title>
     <script src="https://kit.fontawesome.com/c11bbebeff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/CSS/stylesweb01.css">
+    <link rel="stylesheet" href="stylesweb01.css">
     
     <!--Unicons-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="file:///C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#home" id="navbar__logo">Addi Coding</a>
+            <a href="index.html?#home" id="navbar__logo">Addi Coding</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -22,17 +22,17 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#home" class="navbar__links" id="home-page">Home</a>
+                    <a href="index.html?#home" class="navbar__links" id="home-page">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#about" class="navbar__links" id="about-page">About</a>
+                    <a href="index.html?#about" class="navbar__links" id="about-page">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/portfolio_index.html" class="navbar__links"
+                    <a href="portfolio_index.html" class="navbar__links"
                         id="portfolio-page">Portfolio</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/HTML/index.html?#contact" class="navbar__links"
+                    <a href="index.html?#contact" class="navbar__links"
                         id="contact-page">Contact</a>
                 </li>
             </ul>
@@ -42,6 +42,6 @@
     <div class="more__soon">
         <h1>Services Coming Soon!</h1>
     </div>
-    <script src="C:/Users/caleb/Documents/GitHub/Portfolio/Web Development/Websites/My Portfolio/javascript/stylesweb01.js"></script>
+    <script src="stylesweb01.js"></script>
 </body>
 </html>
